@@ -1,3 +1,8 @@
+Wed Aug 16 13:55:08 2006  Tim Janik  <timj@imendio.com>
+
+	* gobject.c: conditionally thaw the notify queue after construction,
+	so we don't trigger warnings when trying to thaw an unfrozen singleton.
+
 2006-08-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.12.2 ===
